# FlyChams-ROS2-v1.4.0

./: .gitignore  README.md
ros2_ws/src/airsim_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/airsim_interfaces/msg/: WindowRectangleCmd.msg  WindowStringCmd.msg
ros2_ws/src/airsim_interfaces/srv/: LoadLevel.srv
ros2_ws/src/airsim_wrapper/: CMakeLists.txt  README.md
ros2_ws/src/airsim_wrapper/include/: airsim_wrapper.h
ros2_ws/src/airsim_wrapper/src/: airsim_node.cpp  airsim_record_camera.cpp  airsim_wrapper.cpp
ros2_ws/src/flychams_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/flychams_bringup/config/core/: frames.yaml  launch.yaml  params.yaml  system.yaml  topics.yaml
ros2_ws/src/flychams_bringup/config/mavros/: config.yaml  pluginlists.yaml
ros2_ws/src/flychams_bringup/config/package/: control.yaml  coordination.yaml  dashboard.yaml  perception.yaml  simulation.yaml  targets.yaml
ros2_ws/src/flychams_bringup/config/recording/: recording.yaml
ros2_ws/src/flychams_bringup/include/flychams_bringup/registration/: agent_registration.hpp  cluster_registration.hpp  gui_registration.hpp  target_registration.hpp
ros2_ws/src/flychams_bringup/launch/: airsim_settings.launch.py  flychams_airsim.launch.py  mavros.launch.py  rosbag.launch.py  run.launch.py  setup.launch.py
ros2_ws/src/flychams_bringup/rviz/: default.rviz
ros2_ws/src/flychams_bringup/src/: agent_registration_node.cpp  airsim_settings_node.cpp  registrator_node.cpp
ros2_ws/src/flychams_bringup/src/registration/: agent_registration.cpp  cluster_registration.cpp  gui_registration.cpp  target_registration.cpp
ros2_ws/src/flychams_control/: CMakeLists.txt  README.md
ros2_ws/src/flychams_control/include/flychams_control/agent_control/: head_controller.hpp  uav_controller.hpp
ros2_ws/src/flychams_control/include/flychams_control/drone/: drone_control.hpp  drone_motion.hpp  drone_state.hpp  speed_planner.hpp
ros2_ws/src/flychams_control/include/flychams_control/head/: head_control.hpp
ros2_ws/src/flychams_control/src/: agent_control_node.cpp  drone_control_node.cpp  drone_state_node.cpp  head_control_node.cpp
ros2_ws/src/flychams_control/src/agent_control/: head_controller.cpp  uav_controller.cpp
ros2_ws/src/flychams_control/src/drone/: drone_motion.cpp  drone_state.cpp
ros2_ws/src/flychams_control/src/head/: head_control.cpp
ros2_ws/src/flychams_control/src/head_control/: head_controller.cpp
ros2_ws/src/flychams_coordination/: CMakeLists.txt  README.md
ros2_ws/src/flychams_coordination/include/flychams_coordination/analysis/: agent_analysis.hpp
ros2_ws/src/flychams_coordination/include/flychams_coordination/assignment/: agent_assignment.hpp  assignment_solver.hpp  suboptimal_combinatorial.hpp
ros2_ws/src/flychams_coordination/include/flychams_coordination/positioning/: acl_pso_algorithm.hpp  agent_positioning.hpp  agent_positioning_experiment.hpp  alc_pso_algorithm.hpp  cma_es_algorithm.hpp  cost_functions.hpp  ellipsoid_method.hpp  l_bfgs_nlopt.hpp  nelder_mead.hpp  nelder_mead_nlopt.hpp  nesterov_algorithm.hpp  position_solver.hpp  pso_algorithm.hpp
ros2_ws/src/flychams_coordination/include/flychams_coordination/tracking/: agent_tracking.hpp  head_solver.hpp  tracking_solver.hpp  tracking_utils.hpp  window_solver.hpp
ros2_ws/src/flychams_coordination/src/: agent_analysis_node.cpp  agent_assignment_node.cpp  agent_positioning_experiment_node.cpp  agent_positioning_node.cpp  agent_tracking_node.cpp
ros2_ws/src/flychams_coordination/src/analysis/: agent_analysis.cpp
ros2_ws/src/flychams_coordination/src/assignment/: agent_assignment.cpp  assignment_solver.cpp
ros2_ws/src/flychams_coordination/src/positioning/: agent_positioning.cpp  agent_positioning_experiment.cpp  position_solver.cpp
ros2_ws/src/flychams_coordination/src/tracking/: agent_tracking.cpp  tracking_solver.cpp  tracking_utils.cpp
ros2_ws/src/flychams_core/: CMakeLists.txt  README.md
ros2_ws/src/flychams_core/include/flychams_core/base/: base_discoverer_node.hpp  base_module.hpp  base_registrator_node.hpp
ros2_ws/src/flychams_core/include/flychams_core/config/: airsim_settings_creator.hpp  config_parser.hpp  config_tools.hpp  config_types.hpp  spreadsheet_parser.hpp
ros2_ws/src/flychams_core/include/flychams_core/framework/: airsim_tools.hpp  framework_tools.hpp
ros2_ws/src/flychams_core/include/flychams_core/tools/: tf_tools.hpp  (+4 more)
ros2_ws/src/flychams_core/src/base/: base_discoverer_node.cpp
ros2_ws/src/flychams_core/src/config/: config_parser.cpp
ros2_ws/src/flychams_core/src/framework/: airsim_tools.cpp  framework_tools.cpp
ros2_ws/src/flychams_core/src/tools/: airsim_tools.cpp
ros2_ws/src/flychams_dashboard/: CMakeLists.txt  README.md
ros2_ws/src/flychams_dashboard/src/: gui_manager_node.cpp  gui_node.cpp  visualization_node.cpp
ros2_ws/src/flychams_dashboard/src/gui/: gui_controller.cpp  gui_manager.cpp
ros2_ws/src/flychams_dashboard/src/marker/: marker_factory.cpp
ros2_ws/src/flychams_dashboard/src/visualization/: markers_factory.cpp  visualization_factory.cpp
ros2_ws/src/flychams_interfaces/: CMakeLists.txt
ros2_ws/src/flychams_interfaces/msg/: AgentAssignment.msg  AgentClusters.msg  AgentHeadSetpoints.msg  AgentMetrics.msg  AgentStatus.msg  AgentTrackingSetpoints.msg  AgentWindowSetpoints.msg  ClusterAssignment.msg  ClusterGeometry.msg  GuiSetpoints.msg  SolverDebug.msg  TrackingGoal.msg
ros2_ws/src/flychams_perception/: CMakeLists.txt  README.md
ros2_ws/src/flychams_perception/src/: cluster_analysis_node.cpp  clustering_node.cpp  target_clustering_node.cpp
ros2_ws/src/flychams_perception/src/analysis/: cluster_analysis.cpp
ros2_ws/src/flychams_perception/src/clustering/: k_means_mod.cpp  target_clustering.cpp
ros2_ws/src/flychams_targets/: CMakeLists.txt  README.md
ros2_ws/src/flychams_targets/src/: target_control_node.cpp  target_state_node.cpp
ros2_ws/src/flychams_targets/src/control/: target_motion.cpp
ros2_ws/src/flychams_targets/src/state/: target_state.cpp
ros2_ws/src/flychams_targets/src/target_control/: target_controller.cpp
(+131 files in other folders)
