<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flychams_bringup</name>
  <version>0.0.1</version>
  <description>
    Launch files and configuration for bringing up the entire FlyingChameleons system.
    Includes multi-node launch files, parameter configs, and environment setup nodes.
  </description>
  <maintainer email="josloprui6@alum.us.es">Jose Francisco Lopez Ruiz</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>flychams_core</depend>

  <!-- Runtime dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- <exec_depend>airsim_wrapper</exec_depend>
  <exec_depend>flychams_control</exec_depend>
  <exec_depend>flychams_perception</exec_depend>
  <exec_depend>flychams_coordination</exec_depend>
  <exec_depend>flychams_dashboard</exec_depend> -->

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>